# Script-and-hashtag-generator-agent

./: README.md  pyproject.toml
agent_in_action/: graph_builder.py  main.py
agent_in_action/prompts/: prompt_templates.py  user_prompt.py
agent_in_action/routes/: api_routing.py
agent_in_action/schemas/: hash_tag_schema.py  overall_state.py  script_schema.py  structure_gen.py
agent_in_action/services/: base_class.py  hash_tag_gen.py  node_routing.py  script_gen.py  sturct_break.py  trend_analysis.py
tests/: agent_test_file.py  schema_test.ipynb
